# rust-2048

./: Cargo.toml
src/: data.rs  main.rs
