[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
druid = { version = "0.8.2", features = ["im"]}
im = "15.1.0"
rand = "0.8.5"
serde = "1.0.160"
serde_json = "1.0.96"
